Designation save, get list, get by id, by  company
