# express/models/index.js
@@ -11,9 +11,15 @@ module.exports = {
     deleteEmployee: require('./employeeModel').delete,
     updateEmployee: require('./employeeModel').update,
 
-    //Organization
+    //Organization Location
     createLocation: require('./locationModel').create,
     findLocation: require('./locationModel').find,
     deleteLocation: require('./locationModel').delete,
     updateLocation: require('./locationModel').update,
+
+    //Organization Designation
+    createDesignation: require('./designationModel').create,
+    findDesignation: require('./designationModel').find,
+    deleteDesignation: require('./designationModel').delete,
+    updateDesignation: require('./designationModel').update,
 }
